force-app/main/default/objects/Timesheet_c__c/Timesheet_c__c.object-meta.xml
<CustomObject>
    <label>Timesheet__c</label>
    <nameField>
        <label>Timesheet__c</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Timesheet__c</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>