force-app/main/default/objects/Timesheet_c__c/fields/Assignment__c.field-meta.xml
<CustomField>
    <fullName>Assignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assignment</label>
    <referenceTo>Assignment__c</referenceTo>
    <relationshipLabel>Timesheet__c</relationshipLabel>
    <relationshipName>Timesheet_c</relationshipName>
    <type>Lookup</type>
</CustomField>