force-app/main/default/objects/Timesheet_c__c/fields/Period_End_c_Date__c.field-meta.xml
<CustomField>
    <fullName>Period_End_c_Date__c</fullName>
    <label>Period_End__c (Date)</label>
    <type>Date</type>
</CustomField>