force-app/main/default/objects/Timesheet_c__c/fields/Period_Start_c_Date__c.field-meta.xml
<CustomField>
    <fullName>Period_Start_c_Date__c</fullName>
    <label>Period_Start__c (Date)</label>
    <type>Date</type>
</CustomField>