force-app/main/default/objects/Timesheet_c__c/fields/Submission_Date__c.field-meta.xml
<CustomField>
    <fullName>Submission_Date__c</fullName>
    <label>Submission Date</label>
    <type>DateTime</type>
</CustomField>