force-app/main/default/objects/Timesheet_c__c/fields/Total_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Hours__c</fullName>
    <label>Total Hours</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>2</scale>
</CustomField>