force-app/main/default/objects/Timesheet_c__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Name__c</columns>
    <columns>Period_Start_c_Date__c</columns>
    <columns>Period_End_c_Date__c</columns>
    <columns>Total_Hours_c_Number_162__c</columns>
    <columns>Approver_Notes__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>